# ssr-workers

./: .gitignore  Cargo.toml  README.md  wrangler.toml
app/: Cargo.toml  index.html
app/src/: lib.rs
worker/: Cargo.toml  wrangler.toml
worker/src/: assets.rs  lib.rs
